[tool.poetry]
name = "torch-istft-onnx"
version = "0.1.0"
description = ""
authors = ["biendltb <biendltb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^4.1.0"
torch = "^2.6.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
